--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="msapplication-TileColor" content="#00aba9">
   <meta name="theme-color" content="#ffffff">
   <meta name="description" content="Opinionated Vite Starter Template">
-  <title>Vitesse</title>
+  <title>Online Voting !!</title>
 </head>
 <body>
   <div id="app"></div>
