--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#00aba9">
   <meta name="msapplication-TileColor" content="#00aba9">
   <meta name="theme-color" content="#ffffff">
-  <meta name="description" content="Opinionated Vite Starter Template">
+  <meta name="description" content="Online Voting System">
   <title>Online Voting !!</title>
 </head>
 <body>
